add meta description

--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <meta name="description" content="" />
+        <meta
+            name="description"
+            content="Interested in science? Bergen Science Museum combines fun and education! Free access for everyone, and guided tours for only 70KR per person."
+        />
         <title>Home | Bergen Science Museum</title>
 
         <link
