--- a/index.html
+++ b/index.html
@@ -31,7 +31,6 @@
         <link rel="stylesheet" href="styles.css" />
     </head>
     <body>
-        <input type="checkbox" name="toggler" class="toggler" />
         <header class="header-wrapper">
             <div class="header-wrapper__left">
                 <img
@@ -43,6 +42,50 @@
                     <p>Bergen Science Museum</p>
                 </div>
             </div>
+            <div class="header-wrapper__right">
+                <nav>
+                    <ul>
+                        <li>
+                            <a href="./index.html">Home</a>
+                        </li>
+                        <li>
+                            <a href="./index.html"
+                                ><details>
+                                    <summary>Activities</summary>
+                                    <li>
+                                        <a href="./pages/about/about.html"
+                                            >Events</a
+                                        >
+                                    </li>
+                                    <li>
+                                        <a href="./pages/about/about.html"
+                                            >Exhibitions</a
+                                        >
+                                    </li>
+                                    <li>
+                                        <a href="./pages/about/about.html"
+                                            >Book a birthday party</a
+                                        >
+                                    </li>
+                                </details></a
+                            >
+                        </li>
+                        <li>
+                            <a href="#women-container">Contribute?</a>
+                        </li>
+                        <li>
+                            <a href="#men-container">About us</a>
+                        </li>
+                        <li>
+                            <a href="./pages/about/about.html">Contact</a>
+                        </li>
+                    </ul>
+                </nav>
+            </div>
+        </header>
+
+        <input type="checkbox" name="toggler" class="toggler" />
+        <header class="mobile-header-wrapper">
             <nav class="menu-wrap">
                 <div class="hamburger">
                     <div></div>
