--- a/index.html
+++ b/index.html
@@ -143,8 +143,23 @@
 
         <main>
             <section class="hero-wrapper">
-                <p>Welcome to</p>
-                <h1>Bergen Science Museum</h1>
+                <div class="hero-wrapper__background">
+                    <p>Welcome to</p>
+                    <h1>Bergen Science Museum</h1>
+                    <div class="custom-shape-divider-bottom-1707487344">
+                        <svg
+                            data-name="Layer 1"
+                            xmlns="http://www.w3.org/2000/svg"
+                            viewBox="0 0 1200 120"
+                            preserveAspectRatio="none"
+                        >
+                            <path
+                                d="M321.39,56.44c58-10.79,114.16-30.13,172-41.86,82.39-16.72,168.19-17.73,250.45-.39C823.78,31,906.67,72,985.66,92.83c70.05,18.48,146.53,26.09,214.34,3V0H0V27.35A600.21,600.21,0,0,0,321.39,56.44Z"
+                                class="shape-fill"
+                            ></path>
+                        </svg>
+                    </div>
+                </div>
             </section>
 
             <section class="events-wrapper">
@@ -154,7 +169,7 @@
                         src="./assets/images/luca-severin-HICcDxJ7PTM-unsplash.jpg"
                         alt="picture of the museum at night - photo by luca severin"
                     />
-                    <div>
+                    <div class="events__night-event__info">
                         <h3>A night in the museum!</h3>
                         <p>
                             Gather your family for an exciting night in the
@@ -170,50 +185,83 @@
                 </div>
                 <div class="events__other-events">
                     <div class="card">
-                        <img
-                            src="./assets/images/monica-garniga-XClNDg9Z9Ag-unsplash.jpg"
-                            alt="a floating comic book style astronaut - photo by monica garniga"
-                        />
-                        <h3></h3>
-                        <p></p>
-                        <a href="./index.html"></a>
+                        <div>
+                            <img
+                                src="./assets/images/monica-garniga-XClNDg9Z9Ag-unsplash.jpg"
+                                alt="a floating comic book style astronaut - photo by monica garniga"
+                            />
+                        </div>
+                        <h3>Visiting Professor of Aeronautics</h3>
+                        <p>
+                            It is our pleasure to announce that Professor Sheila
+                            Widnall from the Massachusetts Institute of
+                            Technology will be delivering 3 lectures on the
+                            development of aeronautics and where the future lies
+                            in this exciting ‘space’.
+                        </p>
+                        <a href="./index.html">Read more</a>
                     </div>
                     <div class="card">
-                        <img
-                            src="./assets/images/jason-leung-j6QZXBVysE8-unsplash.jpg"
-                            alt="wall-e figure holding a flower, made with lego - photo by jason leung"
-                        />
-                        <h3></h3>
-                        <p></p>
-                        <a href="./index.html"></a>
+                        <div>
+                            <img
+                                src="./assets/images/jason-leung-j6QZXBVysE8-unsplash.jpg"
+                                alt="wall-e figure holding a flower, made with lego - photo by jason leung"
+                            />
+                        </div>
+                        <h3>Learn robot programming</h3>
+                        <p>
+                            Join us in this beginner’s course in learning robot
+                            programming during the winter break! This course is
+                            for children between 10 and 14 years of age.
+                        </p>
+                        <a href="./index.html">Read more</a>
                     </div>
                     <div class="card">
-                        <img
-                            src="./assets/images/joyce-adams-eF_3z15RmWY-unsplash.jpg"
-                            alt="dinosaur figures with birthday hats who looks at cake - photo by joyce adams"
-                        />
-                        <h3></h3>
-                        <p></p>
-                        <a href="./index.html"></a>
+                        <div>
+                            <img
+                                src="./assets/images/joyce-adams-eF_3z15RmWY-unsplash.jpg"
+                                alt="dinosaur figures with birthday hats who looks at cake - photo by joyce adams"
+                            />
+                        </div>
+                        <h3>Want to Celebrate Your Birthday with us?</h3>
+                        <p>
+                            Ready to celebrate your special day with a fun
+                            adventure amidst the wonders of science? Don't
+                            worry, we'll make sure the dinosaurs stay far away
+                            from the cake! Let's make some scientific memories
+                            together!
+                        </p>
+                        <a href="./index.html">Read more</a>
                     </div>
                     <div class="card">
-                        <img
-                            src="./assets/images/manel-sean-IF5G2tmZ7cg-unsplash.jpg"
-                            alt="a watermill from nemo science museum - photo by manel sean"
-                        />
-                        <h3></h3>
-                        <p></p>
-                        <a href="./index.html"></a>
+                        <div>
+                            <img
+                                src="./assets/images/manel-sean-IF5G2tmZ7cg-unsplash.jpg"
+                                alt="a watermill from nemo science museum - photo by manel sean"
+                            />
+                        </div>
+                        <h3>Energetica Exhibition on Loan</h3>
+                        <p>
+                            On loan from the NEMO Science Museum in Amsterdam,
+                            the Energetica exhibition is coming to the Community
+                            Science Museum. It’s a series of installations that
+                            allow visitors to experience the power of the
+                            elements as we harness them. From solar energy
+                            powering lighting, to ‘Wind Island’ that shows how
+                            turbines are able to use and control wind to create
+                            power.
+                        </p>
+                        <a href="./index.html">Read more</a>
                     </div>
                 </div>
             </section>
         </main>
 
-        <footer>
+        <footer class="footer-wrapper">
             <div class="info-wrapper">
-                <div class="">
-                    <p>Contact info</p>
-                    <div class="">
+                <div class="info-wrapper__location">
+                    <span>Contact info</span>
+                    <div>
                         <p>Bergen Science Museum</p>
                         <p>Bredalsmarken 15</p>
                         <p>5006 Bergen</p>
@@ -226,10 +274,10 @@
                         <a href="https://www.visitbergen.com/">Visit Bergen</a>
                     </div>
                 </div>
-                <div class="">
-                    <p>Opening hours</p>
-                    <div class="">
-                        <div class="">
+                <div class="info-wrapper__opening-hours">
+                    <span>Opening hours</span>
+                    <div>
+                        <div>
                             <p>Monday:</p>
                             <p>Tuesday:</p>
                             <p>Wednesday:</p>
@@ -238,7 +286,7 @@
                             <p>Saturday:</p>
                             <p>Sunday</p>
                         </div>
-                        <div class="">
+                        <div>
                             <p>Closed</p>
                             <p>10:00 -16:00</p>
                             <p>10:00 -16:00</p>
@@ -249,9 +297,9 @@
                         </div>
                     </div>
                 </div>
-                <div class="">
-                    <p>Quick Links</p>
-                    <div class="">
+                <div class="info-wrapper__quick-links">
+                    <span>Quick Links</span>
+                    <div>
                         <a href="">About us</a>
                         <a href="">Contact us</a>
                         <a href="">Volunteering</a>
@@ -259,27 +307,37 @@
                         <a href="">Terms and conditions</a>
                     </div>
                 </div>
-                <div class="">
-                    <p>Newsletter</p>
-                    <div class="">
-                        <input type="email" name="email" id="email" />
-                        <input type="submit" value="submit" />
+                <div class="info-wrapper__newsletter">
+                    <span>Newsletter</p>
+                    <div class="input-wrapper">
+                        <input type="email" name="email" id="email" placeholder="Your e-mail address"/>
+                        <button type="submit">
+                            <i class="fa-solid fa-play"></i>
+                        </button>
                     </div>
                 </div>
             </div>
             <div class="info-wrapper-bottom">
-                <div class="">
+                <div class="logo">
                     <img src="./assets/images/logo.png" alt="company logo" />
-                    <div class="header-wrapper__left-text">
+                    <div class="text">
                         <span>Explore together</span>
                         <p>Bergen Science Museum</p>
                     </div>
                 </div>
-                <div class="">
-                    <i class="fa-brands fa-facebook-f"></i>
-                    <i class="fa-brands fa-instagram"></i>
-                    <i class="fa-brands fa-tiktok"></i>
-                    <i class="fa-brands fa-tiktok"></i>
+                <div class="info-wrapper-bottom__social-media">
+                    <div>
+                        <i class="fa-brands fa-facebook-f"></i>
+                    </div>
+                    <div>
+                        <i class="fa-brands fa-instagram"></i>
+                    </div>
+                    <div>
+                        <i class="fa-brands fa-tiktok"></i>
+                    </div>
+                    <div>
+                        <i class="fa-brands fa-x-twitter"></i>
+                    </div>
                 </div>
             </div>
         </footer>
