--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             referrerpolicy="no-referrer"
         />
 
-        <link rel="stylesheet" href="styles.css" />
+        <link rel="stylesheet" href="./src/css/global.css">
     </head>
     <body>
         <input type="checkbox" name="toggler" class="toggler" />
@@ -108,9 +108,11 @@
 
         <main>
             <section class="hero-wrapper">
-                <div class="hero-wrapper__background">
-                    <p>Welcome to</p>
-                    <h1>Bergen Science Museum</h1>
+                <div class="hero-wrapper__background landing-hero__background">
+                    <div>
+                        <p>Welcome to</p>
+                        <h1>Bergen Science Museum</h1>
+                    </div>
                     <div class="custom-shape-divider-bottom-1707593276">
                         <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
                             <path d="M321.39,56.44c58-10.79,114.16-30.13,172-41.86,82.39-16.72,168.19-17.73,250.45-.39C823.78,31,906.67,72,985.66,92.83c70.05,18.48,146.53,26.09,214.34,3V0H0V27.35A600.21,600.21,0,0,0,321.39,56.44Z" class="shape-fill"></path>
