add links to footer and nav

--- a/index.html
+++ b/index.html
@@ -56,36 +56,36 @@
                                             <summary>Activities</summary>
                                             <li>
                                                 <a
-                                                    href="./pages/about/about.html"
+                                                    href="./src/html/events.html"
                                                     >Events</a
                                                 >
                                             </li>
                                             <li>
                                                 <a
-                                                    href="./pages/about/about.html"
+                                                    href="./src/html/exhibitions.html"
                                                     >Exhibitions</a
                                                 >
                                             </li>
                                             <li>
                                                 <a
-                                                    href="./pages/about/about.html"
+                                                    href="./src/html/birthday.html"
                                                     >Book a birthday party</a
                                                 >
                                             </li>
                                 </details>
                                     </li>
                                     <li>
-                                        <a href="#women-container"
+                                        <a href="./src/html/contribution.html"
                                             >Want to contribute?</a
                                         >
                                     </li>
                                     <li>
-                                        <a href="#men-container"
+                                        <a href="./src/html/about.html"
                                             >About Bergen Science Museum</a
                                         >
                                     </li>
                                     <li>
-                                        <a href="./pages/about/about.html"
+                                        <a href="./src/html/contact-us.html"
                                             >Need to contact us?</a
                                         >
                                     </li>
@@ -289,16 +289,16 @@
                 </div>
                 <div class="info-wrapper-bottom__social-media">
                     <div>
-                        <i class="fa-brands fa-facebook-f"></i>
+                        <a href="https://www.facebook.com"><i class="fa-brands fa-facebook-f"></i></a>
                     </div>
                     <div>
-                        <i class="fa-brands fa-instagram"></i>
+                        <a href="https://www.instagram.com"><i class="fa-brands fa-instagram"></i></a>
                     </div>
                     <div>
-                        <i class="fa-brands fa-tiktok"></i>
+                        <a href="https://www.tiktok.com"><i class="fa-brands fa-tiktok"></i></a>
                     </div>
                     <div>
-                        <i class="fa-brands fa-x-twitter"></i>
+                        <a href="https://www.x.com"><i class="fa-brands fa-x-twitter"></i></a>
                     </div>
                 </div>
             </div>
