add links to footer and nav

--- a/src/html/about.html
+++ b/src/html/about.html
@@ -52,41 +52,41 @@
                                             <summary>Activities</summary>
                                             <li>
                                                 <a
-                                                    href="./pages/about/about.html"
+                                                    href="./events.html"
                                                     >Events</a
                                                 >
                                             </li>
                                             <li>
                                                 <a
-                                                    href="./pages/about/about.html"
+                                                    href="./exhibitions.html"
                                                     >Exhibitions</a
                                                 >
                                             </li>
                                             <li>
                                                 <a
-                                                    href="./pages/about/about.html"
+                                                    href="./birthday.html"
                                                     >Book a birthday party</a
                                                 >
                                             </li>
                                         </details>
                                     </li>
                                     <li>
-                                        <a href="#women-container"
+                                        <a href="./contribution.html"
                                             >Want to contribute?</a
                                         >
                                     </li>
                                     <li>
-                                        <a href="#men-container"
+                                        <a href="./about.html"
                                             >About Bergen Science Museum</a
                                         >
                                     </li>
                                     <li>
-                                        <a href="./pages/about/about.html"
+                                        <a href="./contact-us.html"
                                             >Need to contact us?</a
                                         >
                                     </li>
                                     <li>
-                                        <a href="./index.html">Home</a>
+                                        <a href="../../index.html">Home</a>
                                     </li>
                                 </ul>
                             </div>
@@ -261,16 +261,16 @@
                 </div>
                 <div class="info-wrapper-bottom__social-media">
                     <div>
-                        <i class="fa-brands fa-facebook-f"></i>
+                        <a href="https://www.facebook.com"><i class="fa-brands fa-facebook-f"></i></a>
                     </div>
                     <div>
-                        <i class="fa-brands fa-instagram"></i>
+                        <a href="https://www.instagram.com"><i class="fa-brands fa-instagram"></i></a>
                     </div>
                     <div>
-                        <i class="fa-brands fa-tiktok"></i>
+                        <a href="https://www.tiktok.com"><i class="fa-brands fa-tiktok"></i></a>
                     </div>
                     <div>
-                        <i class="fa-brands fa-x-twitter"></i>
+                        <a href="https://www.x.com"><i class="fa-brands fa-x-twitter"></i></a>
                     </div>
                 </div>
             </div>
