--- a/src/html/contribution.html
+++ b/src/html/contribution.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <meta name="description" content="" />
+        <meta name="description" content="Discover the many ways you can contribute to our museum." />
         <title>Contribution | Bergen Science Museum</title>
 
         <link
