--- a/src/html/exhibitions.html
+++ b/src/html/exhibitions.html
@@ -133,7 +133,7 @@
                     <article class="card">
                         <img class="card__image"
                         src="../../assets/images/samuel-zeller-113381.jpg"
-                        alt="wall-e figure holding a flower, made with lego - photo by jason leung"
+                        alt="an anatomical figure wearing a hat - photo by samuel zeller"
                         />
                         <div class="card__info">
                             <h3>BIOLOGY AND MEDICINE</h3>
