fix hero img fit

--- a/src/html/contribution.html
+++ b/src/html/contribution.html
@@ -96,8 +96,7 @@
         <main>
 
             <section class="hero-wrapper">
-                <div class="hero-wrapper__background">
-                    <img src="../../assets/images/william-bout-264826.jpg" alt="">
+                <div class="hero-wrapper__background contribution-hero__background">
                     <div class="custom-shape-divider-bottom-1707593276">
                         <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
                             <path d="M321.39,56.44c58-10.79,114.16-30.13,172-41.86,82.39-16.72,168.19-17.73,250.45-.39C823.78,31,906.67,72,985.66,92.83c70.05,18.48,146.53,26.09,214.34,3V0H0V27.35A600.21,600.21,0,0,0,321.39,56.44Z" class="shape-fill"></path>
@@ -105,38 +104,40 @@
                     </div>
                 </div>
             </section>
+
+
             <section class="information-wrapper">
                 <h1> Want to contribute to our museum?</h1>
-            <div>
+                <div>
                 <h2>Support us</h2>
-            <p>
+                <p>
                 There are various ways you can support the museum. 
-            </p>
-            <p>
+                </p>
+                <p>
                 Donations are very welcome and are an important way we keep this museum open and accessible to the whole community.
                 
                 
-            </p>
-            <p>
+                </p>
+                <p>
                 You can also support us by donating items of interest to the museum's collections. If you have some item or collection that you think others would enjoy, please let us know by contacting our <a href="./contact-us.html">Collections Department</a> and they will be able to assist you.
-            </p>
+                </p>
 
-            <h2>Volunteering</h2>
-            <p>
+                <h2>Volunteering</h2>
+                <p>
                 A number of people volunteer their time and effort to keep the displays in good order and ready for visitors to come and enjoy. Volunteering has its perks including getting to see behind the scenes of a working museum, access to staff-only lectures, and a monthly lunch where all staff and volunteers come together to discuss ideas for future exhibits and strategies for the museum.
 
-            </p>
-            <p>
+                </p>
+                <p>
                 You can help volunteer in a number of different spheres. Please contact us if you'd like to find out more about how you can get involved.
-            </p>
-            <h2>Internships</h2>
-            <p>
+                </p>
+                <h2>Internships</h2>
+                <p>
                 Are you interested in working in a museum? Do you enjoy the fun and excitement of sharing the wonders of nature with people? Well you could be just the right person to enjoy an internship at the museum.
-            </p>
-            <p>
+                </p>
+                <p>
                 You'll be learning from a number of different academics and people who are passionate about science and sharing it with the wider community.
-            </p>
-            </div>
+                </p>
+                </div>
             </section>
         </main>
 
