--- a/src/html/exhibitions.html
+++ b/src/html/exhibitions.html
@@ -96,8 +96,8 @@
 
     <main>
         <section class="hero-wrapper">
-            <div class="hero-wrapper__background">
-                <img src="../../assets/images/arseny-togulev-Ch2kxtjeEEc-unsplash.jpg" alt="">
+            <div class="hero-wrapper__background exhibitions-hero__background">
+                
                 <div class="custom-shape-divider-bottom-1707593276">
                     <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
                         <path d="M321.39,56.44c58-10.79,114.16-30.13,172-41.86,82.39-16.72,168.19-17.73,250.45-.39C823.78,31,906.67,72,985.66,92.83c70.05,18.48,146.53,26.09,214.34,3V0H0V27.35A600.21,600.21,0,0,0,321.39,56.44Z" class="shape-fill"></path>
@@ -107,19 +107,18 @@
         </section>
 
         <section class="exhibitions-wrapper">
-            <h1>Evolution</h1>
-            <p>For centuries, philosophers and scientists have wrestled with the question of our origins. Where do we come from and how did we get here? Since Darwin proposed his theory of evolution we have had a framework for exploring and understanding our place in this world.
-
+            <div class="evolution-wrapper">
+                <h1>Evolution</h1>
+                <p>For centuries, philosophers and scientists have wrestled with the question of our origins. Where do we come from and how did we get here? Since Darwin proposed his theory of evolution we have had a framework for exploring and understanding our place in this world.
                 </p>
                 <p>
-                    Discover the origins of life on this planet and how the species we know today have evolved our time. You can also take some time to meet a few of the creatures who didn’t survive, including our Woolly Mammoth, the Dodos, and a number of dinosaurs too.
+                Discover the origins of life on this planet and how the species we know today have evolved our time. You can also take some time to meet a few of the creatures who didn’t survive, including our Woolly Mammoth, the Dodos, and a number of dinosaurs too.
                 </p>
-                <a href="./exhibitions.html"></a>
+                <a href="./exhibitions.html"></a></div>
+
                 <div class="events__other-events">
-                    <h2>More exhibitions</h2>
                     <article class="card">
-                        <img class="card__image"
-                        src="../../assets/images/possessed-photography-g29arbbvPjo-unsplash.jpg"
+                        <img src="../../assets/images/possessed-photography-g29arbbvPjo-unsplash.jpg"
                         alt="a robot showing the rock hand sick - photo by possessed photography"
                         />
                         <div class="card__info">
@@ -131,9 +130,7 @@
                         </div>
                     </article>
                     <article class="card">
-                        <img class="card__image"
-                        src="../../assets/images/samuel-zeller-113381.jpg"
-                        alt="an anatomical figure wearing a hat - photo by samuel zeller"
+                        <img src="../../assets/images/samuel-zeller-113381.jpg" alt="an anatomical figure wearing a hat - photo by samuel zeller"
                         />
                         <div class="card__info">
                             <h3>BIOLOGY AND MEDICINE</h3>
@@ -144,8 +141,7 @@
                         </div>
                     </article>
                     <article class="card">
-                        <img class="card__image"
-                        src="../../assets/images/anderson-rian-LD8FhvuLiEA-unsplash.jpg"
+                        <img src="../../assets/images/anderson-rian-LD8FhvuLiEA-unsplash.jpg"
                         alt="an illustration of each lunar moon stages - photo by anderson rian"
                         />
                         <div class="card__info">
@@ -157,8 +153,7 @@
                         </div>
                     </article>
                     <article class="card"> 
-                        <img class="card__image"
-                        src="../../assets/images/elena-mozhvilo-eA32JIBsSu8-unsplash.jpg"
+                        <img src="../../assets/images/elena-mozhvilo-eA32JIBsSu8-unsplash.jpg"
                         alt="a drawing of the earth - photo by elena mozhvilo"
                         />
                         <div class="card__info">
