add links to footer

--- a/index.html
+++ b/index.html
@@ -259,11 +259,11 @@
                 <div class="info-wrapper__quick-links">
                     <span>Quick Links</span>
                     <div>
-                        <a href="">About us</a>
-                        <a href="">Contact us</a>
-                        <a href="">Volunteering</a>
-                        <a href="">Privacy policy</a>
-                        <a href="">Terms and conditions</a>
+                        <a href="./src/html/about.html">About us</a>
+                        <a href="./src/html/contact-us.html">Contact us</a>
+                        <a href="./src/html/contribution.html">Volunteering</a>
+                        <a href="./src/html/privacy-policy.html">Privacy policy</a>
+                        <a href="./src/html/terms-and-conditions.html">Terms and conditions</a>
                     </div>
                 </div>
                 <div class="info-wrapper__newsletter">
