--- a/src/html/contribution.html
+++ b/src/html/contribution.html
@@ -31,10 +31,10 @@
         <input type="checkbox" name="toggler" class="toggler" />
         <header class="header-wrapper">
             <div class="header-wrapper__left">
-                <img
-                    src="../../assets/images/logo.png"
+                <a href="../../index.html"><img
+                    src="./assets/images/logo.png"
                     alt="purple company logo which shows a creative take on sodium"
-                />
+                /></a>
                 <div class="header-wrapper__left-text">
                     <span>Explore together</span>
                     <p>Bergen Science Museum</p>
