--- a/src/html/exhibitions.html
+++ b/src/html/exhibitions.html
@@ -32,10 +32,11 @@
     <input type="checkbox" name="toggler" class="toggler" />
     <header class="header-wrapper">
         <div class="header-wrapper__left">
-            <a href="../../index.html"><img
-                src="./assets/images/logo.png"
-                alt="purple company logo which shows a creative take on sodium"
-            /></a>
+            <a href="../../index.html">
+                <img
+                    src="../../assets/images/logo.png"
+                    alt="purple company logo which shows a creative take on sodium"/>
+            </a>
             <div class="header-wrapper__left-text">
                 <span>Explore together</span>
                 <p>Bergen Science Museum</p>
