add meta description

--- a/src/html/terms-and-conditions.html
+++ b/src/html/terms-and-conditions.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta
             name="description"
-            content="Read our privacy policy at Bergen Science Museum."
+            content="Read our terms and conditions at Bergen Science Museum."
         />
         <title>Terms and Conditions | Bergen Science Museum</title>
         <link
