--- a/src/html/about.html
+++ b/src/html/about.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <meta name="description" content="" />
+        <meta name="description" content="Curious about our museum? Here you can find practical information about Bergen Science Museum." />
         <title>About | Bergen Science Museum</title>
 
         <link
