--- a/src/html/contact-us.html
+++ b/src/html/contact-us.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <meta name="description" content="" />
+        <meta name="description" content="Need to contact us? Fill out our form and we will get back to you within seven business days." />
         <title>Contact Us | Bergen Science Museum</title>
 
         <link
