add glitch effect to heading

--- a/index.html
+++ b/index.html
@@ -108,7 +108,9 @@
                 <div class="hero-wrapper__background landing-hero__background">
                     <div>
                         <p>Welcome to</p>
-                        <h1>Bergen Science Museum</h1>
+                        <div title="Bergen Science Museum" class="hero glitch layers" data-text="Bergen Science Museum">
+                            <h1>Bergen Science Museum</h1>
+                        </div>
                     </div>
                     <div class="custom-shape-divider-bottom-1707593276">
                         <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
