--- a/src/html/about.html
+++ b/src/html/about.html
@@ -25,7 +25,7 @@
             referrerpolicy="no-referrer"
         />
 
-        <link rel="stylesheet" href="../css/about.css" />
+        <link rel="stylesheet" href="../css/global.css" />
     </head>
     <body>
         <input type="checkbox" name="toggler" class="toggler" />
