add link paths in header and footer

--- a/index.html
+++ b/index.html
@@ -34,10 +34,12 @@
         <input type="checkbox" name="toggler" class="toggler" />
         <header class="header-wrapper">
             <div class="header-wrapper__left">
-                <a href="./index.html"><img
+                <a href="./index.html">
+                    <img
                     src="./assets/images/logo.png"
-                    alt="purple company logo which shows a creative take on sodium"
-                /></a>
+                    alt="purple company logo which shows a creative take on nitrogen"
+                    />
+            </a>
                 <div class="header-wrapper__left-text">
                     <span>Explore together</span>
                     <p>Bergen Science Museum</p>
@@ -112,6 +114,7 @@
                             <h1>Bergen Science Museum</h1>
                         </div>
                     </div>
+                    
                     <div class="custom-shape-divider-bottom-1707593276">
                         <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
                             <path d="M321.39,56.44c58-10.79,114.16-30.13,172-41.86,82.39-16.72,168.19-17.73,250.45-.39C823.78,31,906.67,72,985.66,92.83c70.05,18.48,146.53,26.09,214.34,3V0H0V27.35A600.21,600.21,0,0,0,321.39,56.44Z" class="shape-fill"></path>
@@ -120,7 +123,7 @@
                 </div>
             </section>
 
-            <section class="events-wrapper">
+            <section id="events" class="events-wrapper">
                 <h2>Upcoming events and activities</h2>
                 <div class="events__night-event">
                     <img
@@ -135,7 +138,7 @@
                             museum! Get ready to cozy up next to the dinosaurs
                             and science displays for a sleepover adventure.
                             Don\t forget your trusty sleeping bag as we prepare
-                            to dive into the wonders of science together. It’s
+                            to dive into the wonders of science together. It's
                             going to be a night filled with exploration,
                             laughter, and maybe even a bit of dino-snoring!
                         </p>
@@ -156,7 +159,7 @@
                                 Widnall from the Massachusetts Institute of
                                 Technology will be delivering 3 lectures on the
                                 development of aeronautics and where the future lies
-                                in this exciting ‘space’.
+                                in this exciting 'space'.
                             </p>
                             <a href="./index.html">Read more</a>
                         </div>
@@ -169,7 +172,7 @@
                         <div class="card__info">
                             <h3>Learn robot programming</h3>
                             <p>
-                                Join us in this beginner’s course in learning robot
+                                Join us in this beginner's course in learning robot
                                 programming during the winter break! This course is
                                 for children between 10 and 14 years of age.
                             </p>
@@ -190,7 +193,7 @@
                                 from the cake! Let's make some scientific memories
                                 together!
                             </p>
-                            <a href="./index.html">Read more</a>
+                            <a href="./src/html/birthday.html">Read more</a>
                         </div>
                     </article>
                     <article class="card"> 
@@ -204,10 +207,10 @@
                         <p>
                             On loan from the NEMO Science Museum in Amsterdam,
                             the Energetica exhibition is coming to the Community
-                            Science Museum. It’s a series of installations that
+                            Science Museum. It's a series of installations that
                             allow visitors to experience the power of the
                             elements as we harness them. From solar energy
-                            powering lighting, to ‘Wind Island’ that shows how
+                            powering lighting, to 'Wind Island' that shows how
                             turbines are able to use and control wind to create
                             power.
                         </p>
@@ -280,7 +283,9 @@
             </div>
             <div class="info-wrapper-bottom">
                 <div class="logo">
-                    <img src="./assets/images/logo.png" alt="company logo" />
+                    <a href="./index.html">
+                        <img src="./assets/images/logo.png" alt="purple company logo which shows a creative take on nitrogen" />
+                    </a>
                     <div class="text">
                         <span>Explore together</span>
                         <p>Bergen Science Museum</p>
